--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,4 @@
 [MASTER]
-profile=no
 persistent=yes
-ignore=tests.py, urls.py, migrations, __init__.py
+ignore=tests.py, urls.py, migrations, __init__.py, manage.py, admin.py, apps.py
+disable=bad-indentation, no-else-return, missing-module-docstring
