--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,4 @@
 [MASTER]
 persistent=yes
 ignore=tests.py, urls.py, migrations, __init__.py, manage.py, admin.py, apps.py
-disable=bad-indentation, no-else-return, missing-module-docstring
+disable=bad-indentation, no-else-return, missing-module-docstring, duplicate-code
